// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'CHANNEL' > creates the thread/message and posts overviews and game stats, clears timeline 1`] = `
[
  [
    "other-channel-id",
    {
      "embeds": [
        {
          "color": 3447003,
          "description": "-# Start time: <t:1732617393:f> | End time: <t:1732619016:f>",
          "fields": [
            {
              "inline": true,
              "name": "Game",
              "value": "[CTF: Empyrean - Ranked](https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf)
[KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628](https://halodatahive.com/Infinite/Match/e20900f9-4c6c-4003-a175-00000000koth)",
            },
            {
              "inline": true,
              "name": "Duration",
              "value": "10m 58s
12m 12s",
            },
            {
              "inline": true,
              "name": "Score (🦅:🐍)",
              "value": "3:0
3:2",
            },
          ],
          "title": "Series stats for queue #2",
          "url": "https://discord.com/channels/guild-id/1299532381308325949/1310523001611096064",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "fields": [
            {
              "inline": true,
              "name": "Eagle",
              "value": "Kills: __165__
Deaths: __118__
Assists: __81__
KDA: __74__
Headshot kills: __111__
Shots H:F: __984__:1,743
Accuracy: __56.35%__
Damage D:T (D/T): __47,329__:__41,675__ __(1.14)__
Av life duration: __40s__
Av damage/life: __401.09__
2x<:TripleKill:1322814228477906944> 14x<:DoubleKill:1322814147980689430> 11x<:Perfect:1322879561515532308> <:OfftheRack:1322884747881353279> 6x<:ShotCaller:1322884687693086771> 7x<:KillingSpree:1322803050347499541> <:NoScope:1322882248516702220> 4x<:Snipe:1322872969571340370> <:Killjoy:1322802841039147129> 2x<:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 8x<:Rifleman:1322860656399220828> 5x<:Reversal:1322872797701083166> 5x<:GuardianAngel:1322873057928286248> 4x<:Wingman:1322854221095108609> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": true,
              "name": "Cobra",
              "value": "Kills: 118
Deaths: 166
Assists: 56
KDA: -29.33
Headshot kills: 78
Shots H:F: 922:__1,754__
Accuracy: 52.91%
Damage D:T (D/T): 41,060:48,135 (0.85)
Av life duration: 23s
Av damage/life: 247.35
<:SneakKing:1322883516039696415> 11x<:DoubleKill:1322814147980689430> 5x<:ShotCaller:1322884687693086771> 7x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:NadeShot:1322877140605206528> <:Whiplash:1322882310122504202> 8x<:Rifleman:1322860656399220828> 7x<:Killjoy:1322802841039147129> <:Stick:1322871787695898676> <:StoppedShort:1322806739778670652> <:Reversal:1322872797701083166> <:GuardianAngel:1322873057928286248> <:Spotter:1322814780796309505> <:LastShot:1322884170606972959> 3x<:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Team",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "components": [],
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Acc Score: 6,665)",
              "value": "Kills: __**50**__
Deaths: 36
Assists: 21
KDA: 21
Headshot kills: __**36**__
Shots H:F: **298**:**477**
Accuracy: __**62.83%**__
Damage D:T (D/T): __**13,418**__:12,219 (1.1)
Av life duration: 26s
Av damage/life: 372.72
<:TripleKill:1322814228477906944> 4x<:ShotCaller:1322884687693086771> <:NoScope:1322882248516702220> 8x<:DoubleKill:1322814147980689430> 3x<:KillingSpree:1322803050347499541> 4x<:Perfect:1322879561515532308> <:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 2x<:Reversal:1322872797701083166> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Acc Score: 6,455)",
              "value": "Kills: 42
Deaths: 34
Assists: __**28**__
KDA: 17.33
Headshot kills: 31
Shots H:F: 244:419
Accuracy: 58.36%
Damage D:T (D/T): 12,647:11,513 (1.1)
Av life duration: 28s
Av damage/life: 371.97
2x<:Perfect:1322879561515532308> 3x<:DoubleKill:1322814147980689430> 2x<:ShotCaller:1322884687693086771> 3x<:Snipe:1322872969571340370> 2x<:Rifleman:1322860656399220828> 3x<:Reversal:1322872797701083166> 3x<:GuardianAngel:1322873057928286248> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:Wingman:1322854221095108609> <:Stick:1322871787695898676> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Acc Score: 5,550)",
              "value": "Kills: 42
Deaths: __**16**__
Assists: 13
KDA: __**30.33**__
Headshot kills: 28
Shots H:F: 225:404
Accuracy: 55.05%
Damage D:T (D/T): 9,869:__**7,596**__ __**(1.3)**__
Av life duration: __**66s**__
Av damage/life: __**616.81**__
<:DoubleKill:1322814147980689430> 3x<:Perfect:1322879561515532308> 4x<:KillingSpree:1322803050347499541> <:Killjoy:1322802841039147129> 2x<:Rifleman:1322860656399220828> <:Snipe:1322872969571340370> 2x<:GuardianAngel:1322873057928286248>",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Acc Score: 5,215)",
              "value": "Kills: 31
Deaths: 32
Assists: 26
KDA: 7.66
Headshot kills: 16
Shots H:F: 217:443
Accuracy: 48.59%
Damage D:T (D/T): 11,395:10,347 (1.1)
Av life duration: 30s
Av damage/life: 356.09
<:TripleKill:1322814228477906944> <:OfftheRack:1322884747881353279> 2x<:DoubleKill:1322814147980689430> 2x<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Acc Score: 5,885)",
              "value": "Kills: **49**
Deaths: **39**
Assists: 13
KDA: **14.33**
Headshot kills: **35**
Shots H:F: __**304**__:__**497**__
Accuracy: **62.11%**
Damage D:T (D/T): **13,389**:12,281 **(1.09)**
Av life duration: 24s
Av damage/life: **343.31**
<:SneakKing:1322883516039696415> 8x<:DoubleKill:1322814147980689430> 5x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:Whiplash:1322882310122504202> 2x<:Rifleman:1322860656399220828> 3x<:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Acc Score: 4,185)",
              "value": "Kills: 31
Deaths: 41
Assists: 12
KDA: -6
Headshot kills: 19
Shots H:F: 201:399
Accuracy: 50.41%
Damage D:T (D/T): 8,792:**11,203** (0.78)
Av life duration: 22s
Av damage/life: 214.44
<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Stick:1322871787695898676> <:Killjoy:1322802841039147129> <:GuardianAngel:1322873057928286248> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Acc Score: 3,270)",
              "value": "Kills: 21
Deaths: 47
Assists: **20**
KDA: -19.32
Headshot kills: 14
Shots H:F: 226:458
Accuracy: 49.7%
Damage D:T (D/T): 9,495:13,037 (0.73)
Av life duration: 18s
Av damage/life: 202.02
2x<:DoubleKill:1322814147980689430> 2x<:Rifleman:1322860656399220828> <:Reversal:1322872797701083166> <:LastShot:1322884170606972959> <:Wingman:1322854221095108609> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Acc Score: 2,690)",
              "value": "Kills: 17
Deaths: **39**
Assists: 15
KDA: -16.99
Headshot kills: 10
Shots H:F: 191:400
Accuracy: 47.66%
Damage D:T (D/T): 9,384:11,614 (0.81)
Av life duration: **24s**
Av damage/life: 240.62
5x<:ShotCaller:1322884687693086771> <:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:NadeShot:1322877140605206528> 2x<:Rifleman:1322860656399220828> <:StoppedShort:1322806739778670652> 2x<:Killjoy:1322802841039147129> <:Spotter:1322814780796309505> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Players",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "Team Score: 3 | Team K:D:A: 67:55:33",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Rank: 1 | Score: 2,240)",
              "value": "Kills: 12
Deaths: 14
Assists: 8
KDA: 0.66
Headshot kills: 6
Shots H:F: 83:178
Accuracy: 46.62%
Damage D:T (D/T): 4,736:4,879 (0.97)
Av life duration: 32s
Av damage/life: 338.29
Captures: __**2**__
Captures assists: 0
Carrier time: 9s
Grabs: 4
Returns: 0
Carriers killed: 0
<:TripleKill:1322814228477906944> <:OfftheRack:1322884747881353279> 2x<:DoubleKill:1322814147980689430> <:Rifleman:1322860656399220828>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Rank: 2 | Score: 3,355)",
              "value": "Kills: __**22**__
Deaths: 15
Assists: 10
KDA: __**10.33**__
Headshot kills: __**17**__
Shots H:F: 108:182
Accuracy: 59.34%
Damage D:T (D/T): **5,890**:4,614 __**(1.28)**__
Av life duration: 29s
Av damage/life: 392.67
Captures: 1
Captures assists: 2
Carrier time: 20s
Grabs: 14
Returns: 0
Carriers killed: 0
2x<:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:ShotCaller:1322884687693086771> 3x<:Snipe:1322872969571340370> <:Rifleman:1322860656399220828> 2x<:Reversal:1322872797701083166> 2x<:GuardianAngel:1322873057928286248> <:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Rank: 3 | Score: 2,410)",
              "value": "Kills: 16
Deaths: 17
Assists: __**12**__
KDA: 3
Headshot kills: 11
Shots H:F: **122**:**189**
Accuracy: **64.55%**
Damage D:T (D/T): 5,717:5,479 (1.04)
Av life duration: 27s
Av damage/life: 336.29
Captures: 0
Captures assists: 1
Carrier time: 11s
Grabs: 14
Returns: __**2**__
Carriers killed: 0
2x<:ShotCaller:1322884687693086771> <:NoScope:1322882248516702220> <:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> <:Reversal:1322872797701083166> <:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Rank: 3 | Score: 2,375)",
              "value": "Kills: 17
Deaths: __**9**__
Assists: 6
KDA: 10
Headshot kills: 10
Shots H:F: 84:162
Accuracy: 51.85%
Damage D:T (D/T): 3,859:__**3,049**__ (1.27)
Av life duration: __**53s**__
Av damage/life: __**428.78**__
Captures: 0
Captures assists: __**3**__
Carrier time: **22s**
Grabs: __**15**__
Returns: 0
Carriers killed: __**1**__
<:DoubleKill:1322814147980689430> <:Perfect:1322879561515532308> 2x<:KillingSpree:1322803050347499541> <:Killjoy:1322802841039147129> <:Rifleman:1322860656399220828> <:Snipe:1322872969571340370>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "Team Score: 0 | Team K:D:A: 55:68:20",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Rank: 5 | Score: 2,275)",
              "value": "Kills: **19**
Deaths: 16
Assists: 6
KDA: **5**
Headshot kills: **16**
Shots H:F: __**134**__:__**200**__
Accuracy: __**67%**__
Damage D:T (D/T): __**6,202**__:5,431 **(1.14)**
Av life duration: 27s
Av damage/life: **387.63**
Captures: **0**
Captures assists: **0**
Carrier time: 26s
Grabs: 6
Returns: 0
Carriers killed: 0
3x<:DoubleKill:1322814147980689430> 3x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:Rifleman:1322860656399220828> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Rank: 5 | Score: 1,835)",
              "value": "Kills: 17
Deaths: 16
Assists: 2
KDA: 1.66
Headshot kills: 9
Shots H:F: 81:160
Accuracy: 50.62%
Damage D:T (D/T): 3,657:**4,401** (0.83)
Av life duration: 27s
Av damage/life: 228.56
Captures: **0**
Captures assists: **0**
Carrier time: __**1m 3s**__
Grabs: 6
Returns: 0
Carriers killed: 0
<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> <:Stick:1322871787695898676> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Rank: 5 | Score: 1,485)",
              "value": "Kills: 11
Deaths: 21
Assists: **7**
KDA: -7.66
Headshot kills: 9
Shots H:F: 99:191
Accuracy: 51.83%
Damage D:T (D/T): 4,094:5,882 (0.7)
Av life duration: 19s
Av damage/life: 194.95
Captures: **0**
Captures assists: **0**
Carrier time: 
Grabs: 0
Returns: **1**
Carriers killed: 0
<:DoubleKill:1322814147980689430> <:Rifleman:1322860656399220828> <:Reversal:1322872797701083166>",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Rank: 5 | Score: 1,045)",
              "value": "Kills: 8
Deaths: **15**
Assists: 5
KDA: -5.33
Headshot kills: 5
Shots H:F: 77:163
Accuracy: 47.23%
Damage D:T (D/T): 3,859:5,057 (0.76)
Av life duration: **29s**
Av damage/life: 257.27
Captures: **0**
Captures assists: **0**
Carrier time: 17s
Grabs: **9**
Returns: 0
Carriers killed: __**1**__
2x<:ShotCaller:1322884687693086771> <:Rifleman:1322860656399220828> <:StoppedShort:1322806739778670652>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "CTF: Empyrean - Ranked",
          "url": "https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "Team Score: 3 | Team K:D:A: 98:63:48",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Rank: 1 | Score: 4,255)",
              "value": "Kills: __**34**__
Deaths: 19
Assists: 9
KDA: 18
Headshot kills: __**25**__
Shots H:F: __**176**__:**288**
Accuracy: __**61.11%**__
Damage D:T (D/T): __**7,701**__:6,740 (1.14)
Av life duration: 25s
Av damage/life: 405.32
Captures: __**0**__
Occupation time: **1m 11s**
Secures: __**0**__
Offensive kills: __**7**__
Defensive kills: __**4**__
<:TripleKill:1322814228477906944> 8x<:DoubleKill:1322814147980689430> 3x<:KillingSpree:1322803050347499541> 2x<:ShotCaller:1322884687693086771> 4x<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> <:Reversal:1322872797701083166>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Rank: 1 | Score: 3,100)",
              "value": "Kills: 20
Deaths: 19
Assists: __**18**__
KDA: 7
Headshot kills: 14
Shots H:F: 136:237
Accuracy: 57.38%
Damage D:T (D/T): 6,757:6,899 (0.98)
Av life duration: 27s
Av damage/life: 355.63
Captures: __**0**__
Occupation time: 44s
Secures: __**0**__
Offensive kills: 2
Defensive kills: 3
<:ShotCaller:1322884687693086771> 2x<:DoubleKill:1322814147980689430> <:Reversal:1322872797701083166> <:Stick:1322871787695898676> <:GuardianAngel:1322873057928286248> <:Rifleman:1322860656399220828> 2x<:BackSmack:1322872596135546891> <:Wingman:1322854221095108609> <:LastShot:1322884170606972959>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Rank: 1 | Score: 2,975)",
              "value": "Kills: 19
Deaths: 18
Assists: __**18**__
KDA: 7
Headshot kills: 10
Shots H:F: 134:265
Accuracy: 50.56%
Damage D:T (D/T): 6,659:5,468 (1.22)
Av life duration: 27s
Av damage/life: 369.94
Captures: __**0**__
Occupation time: 49s
Secures: __**0**__
Offensive kills: __**7**__
Defensive kills: 1
2x<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Rank: 4 | Score: 3,175)",
              "value": "Kills: 25
Deaths: __**7**__
Assists: 7
KDA: __**20.33**__
Headshot kills: 18
Shots H:F: 141:242
Accuracy: 58.26%
Damage D:T (D/T): 6,010:__**4,547**__ __**(1.32)**__
Av life duration: __**1m 19s**__
Av damage/life: __**858.57**__
Captures: __**0**__
Occupation time: 53s
Secures: __**0**__
Offensive kills: __**7**__
Defensive kills: 1
2x<:KillingSpree:1322803050347499541> 2x<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> 2x<:GuardianAngel:1322873057928286248>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "Team Score: 2 | Team K:D:A: 63:98:36",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Rank: 5 | Score: 2,350)",
              "value": "Kills: 14
Deaths: 25
Assists: 10
KDA: -7.66
Headshot kills: 10
Shots H:F: 120:239
Accuracy: 50.2%
Damage D:T (D/T): 5,135:6,802 (0.75)
Av life duration: 17s
Av damage/life: 205.4
Captures: __**0**__
Occupation time: __**1m 29s**__
Secures: __**0**__
Offensive kills: 3
Defensive kills: 3
<:Rifleman:1322860656399220828> <:GuardianAngel:1322873057928286248> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Rank: 5 | Score: 1,785)",
              "value": "Kills: 10
Deaths: 26
Assists: **13**
KDA: -11.66
Headshot kills: 5
Shots H:F: 127:267
Accuracy: 47.56%
Damage D:T (D/T): 5,401:7,155 (0.75)
Av life duration: 17s
Av damage/life: 207.73
Captures: __**0**__
Occupation time: 35s
Secures: __**0**__
Offensive kills: 2
Defensive kills: 2
<:DoubleKill:1322814147980689430> <:LastShot:1322884170606972959> <:Wingman:1322854221095108609> <:Killjoy:1322802841039147129> <:Rifleman:1322860656399220828>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Rank: 5 | Score: 1,645)",
              "value": "Kills: 9
Deaths: 24
Assists: 10
KDA: -11.66
Headshot kills: 5
Shots H:F: 114:237
Accuracy: 48.1%
Damage D:T (D/T): 5,525:**6,557** (0.84)
Av life duration: 19s
Av damage/life: 230.21
Captures: __**0**__
Occupation time: 48s
Secures: __**0**__
Offensive kills: 4
Defensive kills: 0
3x<:ShotCaller:1322884687693086771> <:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:NadeShot:1322877140605206528> 2x<:Killjoy:1322802841039147129> <:Spotter:1322814780796309505> <:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Rank: 8 | Score: 3,610)",
              "value": "Kills: **30**
Deaths: **23**
Assists: 7
KDA: **9.33**
Headshot kills: **19**
Shots H:F: **170**:__**297**__
Accuracy: **57.23%**
Damage D:T (D/T): **7,187**:6,850 **(1.05)**
Av life duration: **20s**
Av damage/life: **312.48**
Captures: __**0**__
Occupation time: 47s
Secures: __**0**__
Offensive kills: **5**
Defensive kills: __**4**__
<:SneakKing:1322883516039696415> 2x<:Perfect:1322879561515532308> 5x<:DoubleKill:1322814147980689430> <:Whiplash:1322882310122504202> <:Rifleman:1322860656399220828> 2x<:Killjoy:1322802841039147129>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628",
          "url": "https://halodatahive.com/Infinite/Match/e20900f9-4c6c-4003-a175-00000000koth",
        },
      ],
    },
  ],
]
`;

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'CHANNEL' > creates the thread/message and posts overviews, clears timeline 1`] = `
[
  [
    "other-channel-id",
    {
      "embeds": [
        {
          "color": 3447003,
          "description": "-# Start time: <t:1732617393:f> | End time: <t:1732619016:f>",
          "fields": [
            {
              "inline": true,
              "name": "Game",
              "value": "[CTF: Empyrean - Ranked](https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf)
[KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628](https://halodatahive.com/Infinite/Match/e20900f9-4c6c-4003-a175-00000000koth)",
            },
            {
              "inline": true,
              "name": "Duration",
              "value": "10m 58s
12m 12s",
            },
            {
              "inline": true,
              "name": "Score (🦅:🐍)",
              "value": "3:0
3:2",
            },
          ],
          "title": "Series stats for queue #2",
          "url": "https://discord.com/channels/guild-id/1299532381308325949/1310523001611096064",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "fields": [
            {
              "inline": true,
              "name": "Eagle",
              "value": "Kills: __165__
Deaths: __118__
Assists: __81__
KDA: __74__
Headshot kills: __111__
Shots H:F: __984__:1,743
Accuracy: __56.35%__
Damage D:T (D/T): __47,329__:__41,675__ __(1.14)__
Av life duration: __40s__
Av damage/life: __401.09__
2x<:TripleKill:1322814228477906944> 14x<:DoubleKill:1322814147980689430> 11x<:Perfect:1322879561515532308> <:OfftheRack:1322884747881353279> 6x<:ShotCaller:1322884687693086771> 7x<:KillingSpree:1322803050347499541> <:NoScope:1322882248516702220> 4x<:Snipe:1322872969571340370> <:Killjoy:1322802841039147129> 2x<:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 8x<:Rifleman:1322860656399220828> 5x<:Reversal:1322872797701083166> 5x<:GuardianAngel:1322873057928286248> 4x<:Wingman:1322854221095108609> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": true,
              "name": "Cobra",
              "value": "Kills: 118
Deaths: 166
Assists: 56
KDA: -29.33
Headshot kills: 78
Shots H:F: 922:__1,754__
Accuracy: 52.91%
Damage D:T (D/T): 41,060:48,135 (0.85)
Av life duration: 23s
Av damage/life: 247.35
<:SneakKing:1322883516039696415> 11x<:DoubleKill:1322814147980689430> 5x<:ShotCaller:1322884687693086771> 7x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:NadeShot:1322877140605206528> <:Whiplash:1322882310122504202> 8x<:Rifleman:1322860656399220828> 7x<:Killjoy:1322802841039147129> <:Stick:1322871787695898676> <:StoppedShort:1322806739778670652> <:Reversal:1322872797701083166> <:GuardianAngel:1322873057928286248> <:Spotter:1322814780796309505> <:LastShot:1322884170606972959> 3x<:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Team",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "components": [
        {
          "components": [
            {
              "custom_id": "btn_stats_load_games",
              "emoji": {
                "name": "🎮",
              },
              "label": "Load game stats",
              "style": 1,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Acc Score: 6,665)",
              "value": "Kills: __**50**__
Deaths: 36
Assists: 21
KDA: 21
Headshot kills: __**36**__
Shots H:F: **298**:**477**
Accuracy: __**62.83%**__
Damage D:T (D/T): __**13,418**__:12,219 (1.1)
Av life duration: 26s
Av damage/life: 372.72
<:TripleKill:1322814228477906944> 4x<:ShotCaller:1322884687693086771> <:NoScope:1322882248516702220> 8x<:DoubleKill:1322814147980689430> 3x<:KillingSpree:1322803050347499541> 4x<:Perfect:1322879561515532308> <:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 2x<:Reversal:1322872797701083166> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Acc Score: 6,455)",
              "value": "Kills: 42
Deaths: 34
Assists: __**28**__
KDA: 17.33
Headshot kills: 31
Shots H:F: 244:419
Accuracy: 58.36%
Damage D:T (D/T): 12,647:11,513 (1.1)
Av life duration: 28s
Av damage/life: 371.97
2x<:Perfect:1322879561515532308> 3x<:DoubleKill:1322814147980689430> 2x<:ShotCaller:1322884687693086771> 3x<:Snipe:1322872969571340370> 2x<:Rifleman:1322860656399220828> 3x<:Reversal:1322872797701083166> 3x<:GuardianAngel:1322873057928286248> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:Wingman:1322854221095108609> <:Stick:1322871787695898676> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Acc Score: 5,550)",
              "value": "Kills: 42
Deaths: __**16**__
Assists: 13
KDA: __**30.33**__
Headshot kills: 28
Shots H:F: 225:404
Accuracy: 55.05%
Damage D:T (D/T): 9,869:__**7,596**__ __**(1.3)**__
Av life duration: __**66s**__
Av damage/life: __**616.81**__
<:DoubleKill:1322814147980689430> 3x<:Perfect:1322879561515532308> 4x<:KillingSpree:1322803050347499541> <:Killjoy:1322802841039147129> 2x<:Rifleman:1322860656399220828> <:Snipe:1322872969571340370> 2x<:GuardianAngel:1322873057928286248>",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Acc Score: 5,215)",
              "value": "Kills: 31
Deaths: 32
Assists: 26
KDA: 7.66
Headshot kills: 16
Shots H:F: 217:443
Accuracy: 48.59%
Damage D:T (D/T): 11,395:10,347 (1.1)
Av life duration: 30s
Av damage/life: 356.09
<:TripleKill:1322814228477906944> <:OfftheRack:1322884747881353279> 2x<:DoubleKill:1322814147980689430> 2x<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Acc Score: 5,885)",
              "value": "Kills: **49**
Deaths: **39**
Assists: 13
KDA: **14.33**
Headshot kills: **35**
Shots H:F: __**304**__:__**497**__
Accuracy: **62.11%**
Damage D:T (D/T): **13,389**:12,281 **(1.09)**
Av life duration: 24s
Av damage/life: **343.31**
<:SneakKing:1322883516039696415> 8x<:DoubleKill:1322814147980689430> 5x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:Whiplash:1322882310122504202> 2x<:Rifleman:1322860656399220828> 3x<:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Acc Score: 4,185)",
              "value": "Kills: 31
Deaths: 41
Assists: 12
KDA: -6
Headshot kills: 19
Shots H:F: 201:399
Accuracy: 50.41%
Damage D:T (D/T): 8,792:**11,203** (0.78)
Av life duration: 22s
Av damage/life: 214.44
<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Stick:1322871787695898676> <:Killjoy:1322802841039147129> <:GuardianAngel:1322873057928286248> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Acc Score: 3,270)",
              "value": "Kills: 21
Deaths: 47
Assists: **20**
KDA: -19.32
Headshot kills: 14
Shots H:F: 226:458
Accuracy: 49.7%
Damage D:T (D/T): 9,495:13,037 (0.73)
Av life duration: 18s
Av damage/life: 202.02
2x<:DoubleKill:1322814147980689430> 2x<:Rifleman:1322860656399220828> <:Reversal:1322872797701083166> <:LastShot:1322884170606972959> <:Wingman:1322854221095108609> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Acc Score: 2,690)",
              "value": "Kills: 17
Deaths: **39**
Assists: 15
KDA: -16.99
Headshot kills: 10
Shots H:F: 191:400
Accuracy: 47.66%
Damage D:T (D/T): 9,384:11,614 (0.81)
Av life duration: **24s**
Av damage/life: 240.62
5x<:ShotCaller:1322884687693086771> <:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:NadeShot:1322877140605206528> 2x<:Rifleman:1322860656399220828> <:StoppedShort:1322806739778670652> 2x<:Killjoy:1322802841039147129> <:Spotter:1322814780796309505> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Players",
        },
      ],
    },
  ],
]
`;

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'CHANNEL' > handles failure to clear timeline data (high level error handling) 1`] = `
[
  "other-channel-id",
  {
    "embeds": [
      {
        "color": 16711680,
        "description": "Something went wrong while trying to post series data",
        "fields": [
          {
            "name": "Additional Information",
            "value": "**Channel**: <#results-channel-1>
**Queue**: 2
**Completed**: <t:1735689600:f>",
          },
        ],
        "title": "Something went wrong",
      },
    ],
  },
]
`;

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'CHANNEL' > handles missing results message 1`] = `
[
  "other-channel-id",
  {
    "embeds": [
      {
        "color": 16711680,
        "description": "Failed to find the results message",
        "fields": [
          {
            "name": "Additional Information",
            "value": "**Channel**: <#results-channel-1>
**Queue**: 2
**Completed**: <t:1735689600:f>",
          },
        ],
        "title": "Something went wrong",
      },
    ],
  },
]
`;

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'MESSAGE' > creates the thread/message and posts overviews and game stats, clears timeline 1`] = `
[
  [
    "results-channel-1",
    {
      "embeds": [
        {
          "color": 3447003,
          "description": "-# Start time: <t:1732617393:f> | End time: <t:1732619016:f>",
          "fields": [
            {
              "inline": true,
              "name": "Game",
              "value": "[CTF: Empyrean - Ranked](https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf)
[KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628](https://halodatahive.com/Infinite/Match/e20900f9-4c6c-4003-a175-00000000koth)",
            },
            {
              "inline": true,
              "name": "Duration",
              "value": "10m 58s
12m 12s",
            },
            {
              "inline": true,
              "name": "Score (🦅:🐍)",
              "value": "3:0
3:2",
            },
          ],
          "title": "Series stats for queue #2",
          "url": "https://discord.com/channels/guild-id/1299532381308325949/1310523001611096064",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "fields": [
            {
              "inline": true,
              "name": "Eagle",
              "value": "Kills: __165__
Deaths: __118__
Assists: __81__
KDA: __74__
Headshot kills: __111__
Shots H:F: __984__:1,743
Accuracy: __56.35%__
Damage D:T (D/T): __47,329__:__41,675__ __(1.14)__
Av life duration: __40s__
Av damage/life: __401.09__
2x<:TripleKill:1322814228477906944> 14x<:DoubleKill:1322814147980689430> 11x<:Perfect:1322879561515532308> <:OfftheRack:1322884747881353279> 6x<:ShotCaller:1322884687693086771> 7x<:KillingSpree:1322803050347499541> <:NoScope:1322882248516702220> 4x<:Snipe:1322872969571340370> <:Killjoy:1322802841039147129> 2x<:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 8x<:Rifleman:1322860656399220828> 5x<:Reversal:1322872797701083166> 5x<:GuardianAngel:1322873057928286248> 4x<:Wingman:1322854221095108609> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": true,
              "name": "Cobra",
              "value": "Kills: 118
Deaths: 166
Assists: 56
KDA: -29.33
Headshot kills: 78
Shots H:F: 922:__1,754__
Accuracy: 52.91%
Damage D:T (D/T): 41,060:48,135 (0.85)
Av life duration: 23s
Av damage/life: 247.35
<:SneakKing:1322883516039696415> 11x<:DoubleKill:1322814147980689430> 5x<:ShotCaller:1322884687693086771> 7x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:NadeShot:1322877140605206528> <:Whiplash:1322882310122504202> 8x<:Rifleman:1322860656399220828> 7x<:Killjoy:1322802841039147129> <:Stick:1322871787695898676> <:StoppedShort:1322806739778670652> <:Reversal:1322872797701083166> <:GuardianAngel:1322873057928286248> <:Spotter:1322814780796309505> <:LastShot:1322884170606972959> 3x<:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Team",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "components": [],
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Acc Score: 6,665)",
              "value": "Kills: __**50**__
Deaths: 36
Assists: 21
KDA: 21
Headshot kills: __**36**__
Shots H:F: **298**:**477**
Accuracy: __**62.83%**__
Damage D:T (D/T): __**13,418**__:12,219 (1.1)
Av life duration: 26s
Av damage/life: 372.72
<:TripleKill:1322814228477906944> 4x<:ShotCaller:1322884687693086771> <:NoScope:1322882248516702220> 8x<:DoubleKill:1322814147980689430> 3x<:KillingSpree:1322803050347499541> 4x<:Perfect:1322879561515532308> <:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 2x<:Reversal:1322872797701083166> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Acc Score: 6,455)",
              "value": "Kills: 42
Deaths: 34
Assists: __**28**__
KDA: 17.33
Headshot kills: 31
Shots H:F: 244:419
Accuracy: 58.36%
Damage D:T (D/T): 12,647:11,513 (1.1)
Av life duration: 28s
Av damage/life: 371.97
2x<:Perfect:1322879561515532308> 3x<:DoubleKill:1322814147980689430> 2x<:ShotCaller:1322884687693086771> 3x<:Snipe:1322872969571340370> 2x<:Rifleman:1322860656399220828> 3x<:Reversal:1322872797701083166> 3x<:GuardianAngel:1322873057928286248> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:Wingman:1322854221095108609> <:Stick:1322871787695898676> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Acc Score: 5,550)",
              "value": "Kills: 42
Deaths: __**16**__
Assists: 13
KDA: __**30.33**__
Headshot kills: 28
Shots H:F: 225:404
Accuracy: 55.05%
Damage D:T (D/T): 9,869:__**7,596**__ __**(1.3)**__
Av life duration: __**66s**__
Av damage/life: __**616.81**__
<:DoubleKill:1322814147980689430> 3x<:Perfect:1322879561515532308> 4x<:KillingSpree:1322803050347499541> <:Killjoy:1322802841039147129> 2x<:Rifleman:1322860656399220828> <:Snipe:1322872969571340370> 2x<:GuardianAngel:1322873057928286248>",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Acc Score: 5,215)",
              "value": "Kills: 31
Deaths: 32
Assists: 26
KDA: 7.66
Headshot kills: 16
Shots H:F: 217:443
Accuracy: 48.59%
Damage D:T (D/T): 11,395:10,347 (1.1)
Av life duration: 30s
Av damage/life: 356.09
<:TripleKill:1322814228477906944> <:OfftheRack:1322884747881353279> 2x<:DoubleKill:1322814147980689430> 2x<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Acc Score: 5,885)",
              "value": "Kills: **49**
Deaths: **39**
Assists: 13
KDA: **14.33**
Headshot kills: **35**
Shots H:F: __**304**__:__**497**__
Accuracy: **62.11%**
Damage D:T (D/T): **13,389**:12,281 **(1.09)**
Av life duration: 24s
Av damage/life: **343.31**
<:SneakKing:1322883516039696415> 8x<:DoubleKill:1322814147980689430> 5x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:Whiplash:1322882310122504202> 2x<:Rifleman:1322860656399220828> 3x<:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Acc Score: 4,185)",
              "value": "Kills: 31
Deaths: 41
Assists: 12
KDA: -6
Headshot kills: 19
Shots H:F: 201:399
Accuracy: 50.41%
Damage D:T (D/T): 8,792:**11,203** (0.78)
Av life duration: 22s
Av damage/life: 214.44
<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Stick:1322871787695898676> <:Killjoy:1322802841039147129> <:GuardianAngel:1322873057928286248> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Acc Score: 3,270)",
              "value": "Kills: 21
Deaths: 47
Assists: **20**
KDA: -19.32
Headshot kills: 14
Shots H:F: 226:458
Accuracy: 49.7%
Damage D:T (D/T): 9,495:13,037 (0.73)
Av life duration: 18s
Av damage/life: 202.02
2x<:DoubleKill:1322814147980689430> 2x<:Rifleman:1322860656399220828> <:Reversal:1322872797701083166> <:LastShot:1322884170606972959> <:Wingman:1322854221095108609> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Acc Score: 2,690)",
              "value": "Kills: 17
Deaths: **39**
Assists: 15
KDA: -16.99
Headshot kills: 10
Shots H:F: 191:400
Accuracy: 47.66%
Damage D:T (D/T): 9,384:11,614 (0.81)
Av life duration: **24s**
Av damage/life: 240.62
5x<:ShotCaller:1322884687693086771> <:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:NadeShot:1322877140605206528> 2x<:Rifleman:1322860656399220828> <:StoppedShort:1322806739778670652> 2x<:Killjoy:1322802841039147129> <:Spotter:1322814780796309505> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Players",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "Team Score: 3 | Team K:D:A: 67:55:33",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Rank: 1 | Score: 2,240)",
              "value": "Kills: 12
Deaths: 14
Assists: 8
KDA: 0.66
Headshot kills: 6
Shots H:F: 83:178
Accuracy: 46.62%
Damage D:T (D/T): 4,736:4,879 (0.97)
Av life duration: 32s
Av damage/life: 338.29
Captures: __**2**__
Captures assists: 0
Carrier time: 9s
Grabs: 4
Returns: 0
Carriers killed: 0
<:TripleKill:1322814228477906944> <:OfftheRack:1322884747881353279> 2x<:DoubleKill:1322814147980689430> <:Rifleman:1322860656399220828>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Rank: 2 | Score: 3,355)",
              "value": "Kills: __**22**__
Deaths: 15
Assists: 10
KDA: __**10.33**__
Headshot kills: __**17**__
Shots H:F: 108:182
Accuracy: 59.34%
Damage D:T (D/T): **5,890**:4,614 __**(1.28)**__
Av life duration: 29s
Av damage/life: 392.67
Captures: 1
Captures assists: 2
Carrier time: 20s
Grabs: 14
Returns: 0
Carriers killed: 0
2x<:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:ShotCaller:1322884687693086771> 3x<:Snipe:1322872969571340370> <:Rifleman:1322860656399220828> 2x<:Reversal:1322872797701083166> 2x<:GuardianAngel:1322873057928286248> <:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Rank: 3 | Score: 2,410)",
              "value": "Kills: 16
Deaths: 17
Assists: __**12**__
KDA: 3
Headshot kills: 11
Shots H:F: **122**:**189**
Accuracy: **64.55%**
Damage D:T (D/T): 5,717:5,479 (1.04)
Av life duration: 27s
Av damage/life: 336.29
Captures: 0
Captures assists: 1
Carrier time: 11s
Grabs: 14
Returns: __**2**__
Carriers killed: 0
2x<:ShotCaller:1322884687693086771> <:NoScope:1322882248516702220> <:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> <:Reversal:1322872797701083166> <:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Rank: 3 | Score: 2,375)",
              "value": "Kills: 17
Deaths: __**9**__
Assists: 6
KDA: 10
Headshot kills: 10
Shots H:F: 84:162
Accuracy: 51.85%
Damage D:T (D/T): 3,859:__**3,049**__ (1.27)
Av life duration: __**53s**__
Av damage/life: __**428.78**__
Captures: 0
Captures assists: __**3**__
Carrier time: **22s**
Grabs: __**15**__
Returns: 0
Carriers killed: __**1**__
<:DoubleKill:1322814147980689430> <:Perfect:1322879561515532308> 2x<:KillingSpree:1322803050347499541> <:Killjoy:1322802841039147129> <:Rifleman:1322860656399220828> <:Snipe:1322872969571340370>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "Team Score: 0 | Team K:D:A: 55:68:20",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Rank: 5 | Score: 2,275)",
              "value": "Kills: **19**
Deaths: 16
Assists: 6
KDA: **5**
Headshot kills: **16**
Shots H:F: __**134**__:__**200**__
Accuracy: __**67%**__
Damage D:T (D/T): __**6,202**__:5,431 **(1.14)**
Av life duration: 27s
Av damage/life: **387.63**
Captures: **0**
Captures assists: **0**
Carrier time: 26s
Grabs: 6
Returns: 0
Carriers killed: 0
3x<:DoubleKill:1322814147980689430> 3x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:Rifleman:1322860656399220828> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Rank: 5 | Score: 1,835)",
              "value": "Kills: 17
Deaths: 16
Assists: 2
KDA: 1.66
Headshot kills: 9
Shots H:F: 81:160
Accuracy: 50.62%
Damage D:T (D/T): 3,657:**4,401** (0.83)
Av life duration: 27s
Av damage/life: 228.56
Captures: **0**
Captures assists: **0**
Carrier time: __**1m 3s**__
Grabs: 6
Returns: 0
Carriers killed: 0
<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> <:Stick:1322871787695898676> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Rank: 5 | Score: 1,485)",
              "value": "Kills: 11
Deaths: 21
Assists: **7**
KDA: -7.66
Headshot kills: 9
Shots H:F: 99:191
Accuracy: 51.83%
Damage D:T (D/T): 4,094:5,882 (0.7)
Av life duration: 19s
Av damage/life: 194.95
Captures: **0**
Captures assists: **0**
Carrier time: 
Grabs: 0
Returns: **1**
Carriers killed: 0
<:DoubleKill:1322814147980689430> <:Rifleman:1322860656399220828> <:Reversal:1322872797701083166>",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Rank: 5 | Score: 1,045)",
              "value": "Kills: 8
Deaths: **15**
Assists: 5
KDA: -5.33
Headshot kills: 5
Shots H:F: 77:163
Accuracy: 47.23%
Damage D:T (D/T): 3,859:5,057 (0.76)
Av life duration: **29s**
Av damage/life: 257.27
Captures: **0**
Captures assists: **0**
Carrier time: 17s
Grabs: **9**
Returns: 0
Carriers killed: __**1**__
2x<:ShotCaller:1322884687693086771> <:Rifleman:1322860656399220828> <:StoppedShort:1322806739778670652>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "CTF: Empyrean - Ranked",
          "url": "https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "Team Score: 3 | Team K:D:A: 98:63:48",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Rank: 1 | Score: 4,255)",
              "value": "Kills: __**34**__
Deaths: 19
Assists: 9
KDA: 18
Headshot kills: __**25**__
Shots H:F: __**176**__:**288**
Accuracy: __**61.11%**__
Damage D:T (D/T): __**7,701**__:6,740 (1.14)
Av life duration: 25s
Av damage/life: 405.32
Captures: __**0**__
Occupation time: **1m 11s**
Secures: __**0**__
Offensive kills: __**7**__
Defensive kills: __**4**__
<:TripleKill:1322814228477906944> 8x<:DoubleKill:1322814147980689430> 3x<:KillingSpree:1322803050347499541> 2x<:ShotCaller:1322884687693086771> 4x<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> <:Reversal:1322872797701083166>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Rank: 1 | Score: 3,100)",
              "value": "Kills: 20
Deaths: 19
Assists: __**18**__
KDA: 7
Headshot kills: 14
Shots H:F: 136:237
Accuracy: 57.38%
Damage D:T (D/T): 6,757:6,899 (0.98)
Av life duration: 27s
Av damage/life: 355.63
Captures: __**0**__
Occupation time: 44s
Secures: __**0**__
Offensive kills: 2
Defensive kills: 3
<:ShotCaller:1322884687693086771> 2x<:DoubleKill:1322814147980689430> <:Reversal:1322872797701083166> <:Stick:1322871787695898676> <:GuardianAngel:1322873057928286248> <:Rifleman:1322860656399220828> 2x<:BackSmack:1322872596135546891> <:Wingman:1322854221095108609> <:LastShot:1322884170606972959>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Rank: 1 | Score: 2,975)",
              "value": "Kills: 19
Deaths: 18
Assists: __**18**__
KDA: 7
Headshot kills: 10
Shots H:F: 134:265
Accuracy: 50.56%
Damage D:T (D/T): 6,659:5,468 (1.22)
Av life duration: 27s
Av damage/life: 369.94
Captures: __**0**__
Occupation time: 49s
Secures: __**0**__
Offensive kills: __**7**__
Defensive kills: 1
2x<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Rank: 4 | Score: 3,175)",
              "value": "Kills: 25
Deaths: __**7**__
Assists: 7
KDA: __**20.33**__
Headshot kills: 18
Shots H:F: 141:242
Accuracy: 58.26%
Damage D:T (D/T): 6,010:__**4,547**__ __**(1.32)**__
Av life duration: __**1m 19s**__
Av damage/life: __**858.57**__
Captures: __**0**__
Occupation time: 53s
Secures: __**0**__
Offensive kills: __**7**__
Defensive kills: 1
2x<:KillingSpree:1322803050347499541> 2x<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> 2x<:GuardianAngel:1322873057928286248>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "Team Score: 2 | Team K:D:A: 63:98:36",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Rank: 5 | Score: 2,350)",
              "value": "Kills: 14
Deaths: 25
Assists: 10
KDA: -7.66
Headshot kills: 10
Shots H:F: 120:239
Accuracy: 50.2%
Damage D:T (D/T): 5,135:6,802 (0.75)
Av life duration: 17s
Av damage/life: 205.4
Captures: __**0**__
Occupation time: __**1m 29s**__
Secures: __**0**__
Offensive kills: 3
Defensive kills: 3
<:Rifleman:1322860656399220828> <:GuardianAngel:1322873057928286248> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Rank: 5 | Score: 1,785)",
              "value": "Kills: 10
Deaths: 26
Assists: **13**
KDA: -11.66
Headshot kills: 5
Shots H:F: 127:267
Accuracy: 47.56%
Damage D:T (D/T): 5,401:7,155 (0.75)
Av life duration: 17s
Av damage/life: 207.73
Captures: __**0**__
Occupation time: 35s
Secures: __**0**__
Offensive kills: 2
Defensive kills: 2
<:DoubleKill:1322814147980689430> <:LastShot:1322884170606972959> <:Wingman:1322854221095108609> <:Killjoy:1322802841039147129> <:Rifleman:1322860656399220828>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Rank: 5 | Score: 1,645)",
              "value": "Kills: 9
Deaths: 24
Assists: 10
KDA: -11.66
Headshot kills: 5
Shots H:F: 114:237
Accuracy: 48.1%
Damage D:T (D/T): 5,525:**6,557** (0.84)
Av life duration: 19s
Av damage/life: 230.21
Captures: __**0**__
Occupation time: 48s
Secures: __**0**__
Offensive kills: 4
Defensive kills: 0
3x<:ShotCaller:1322884687693086771> <:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:NadeShot:1322877140605206528> 2x<:Killjoy:1322802841039147129> <:Spotter:1322814780796309505> <:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Rank: 8 | Score: 3,610)",
              "value": "Kills: **30**
Deaths: **23**
Assists: 7
KDA: **9.33**
Headshot kills: **19**
Shots H:F: **170**:__**297**__
Accuracy: **57.23%**
Damage D:T (D/T): **7,187**:6,850 **(1.05)**
Av life duration: **20s**
Av damage/life: **312.48**
Captures: __**0**__
Occupation time: 47s
Secures: __**0**__
Offensive kills: **5**
Defensive kills: __**4**__
<:SneakKing:1322883516039696415> 2x<:Perfect:1322879561515532308> 5x<:DoubleKill:1322814147980689430> <:Whiplash:1322882310122504202> <:Rifleman:1322860656399220828> 2x<:Killjoy:1322802841039147129>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628",
          "url": "https://halodatahive.com/Infinite/Match/e20900f9-4c6c-4003-a175-00000000koth",
        },
      ],
    },
  ],
]
`;

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'MESSAGE' > creates the thread/message and posts overviews, clears timeline 1`] = `
[
  [
    "results-channel-1",
    {
      "embeds": [
        {
          "color": 3447003,
          "description": "-# Start time: <t:1732617393:f> | End time: <t:1732619016:f>",
          "fields": [
            {
              "inline": true,
              "name": "Game",
              "value": "[CTF: Empyrean - Ranked](https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf)
[KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628](https://halodatahive.com/Infinite/Match/e20900f9-4c6c-4003-a175-00000000koth)",
            },
            {
              "inline": true,
              "name": "Duration",
              "value": "10m 58s
12m 12s",
            },
            {
              "inline": true,
              "name": "Score (🦅:🐍)",
              "value": "3:0
3:2",
            },
          ],
          "title": "Series stats for queue #2",
          "url": "https://discord.com/channels/guild-id/1299532381308325949/1310523001611096064",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "fields": [
            {
              "inline": true,
              "name": "Eagle",
              "value": "Kills: __165__
Deaths: __118__
Assists: __81__
KDA: __74__
Headshot kills: __111__
Shots H:F: __984__:1,743
Accuracy: __56.35%__
Damage D:T (D/T): __47,329__:__41,675__ __(1.14)__
Av life duration: __40s__
Av damage/life: __401.09__
2x<:TripleKill:1322814228477906944> 14x<:DoubleKill:1322814147980689430> 11x<:Perfect:1322879561515532308> <:OfftheRack:1322884747881353279> 6x<:ShotCaller:1322884687693086771> 7x<:KillingSpree:1322803050347499541> <:NoScope:1322882248516702220> 4x<:Snipe:1322872969571340370> <:Killjoy:1322802841039147129> 2x<:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 8x<:Rifleman:1322860656399220828> 5x<:Reversal:1322872797701083166> 5x<:GuardianAngel:1322873057928286248> 4x<:Wingman:1322854221095108609> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": true,
              "name": "Cobra",
              "value": "Kills: 118
Deaths: 166
Assists: 56
KDA: -29.33
Headshot kills: 78
Shots H:F: 922:__1,754__
Accuracy: 52.91%
Damage D:T (D/T): 41,060:48,135 (0.85)
Av life duration: 23s
Av damage/life: 247.35
<:SneakKing:1322883516039696415> 11x<:DoubleKill:1322814147980689430> 5x<:ShotCaller:1322884687693086771> 7x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:NadeShot:1322877140605206528> <:Whiplash:1322882310122504202> 8x<:Rifleman:1322860656399220828> 7x<:Killjoy:1322802841039147129> <:Stick:1322871787695898676> <:StoppedShort:1322806739778670652> <:Reversal:1322872797701083166> <:GuardianAngel:1322873057928286248> <:Spotter:1322814780796309505> <:LastShot:1322884170606972959> 3x<:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Team",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "components": [
        {
          "components": [
            {
              "custom_id": "btn_stats_load_games",
              "emoji": {
                "name": "🎮",
              },
              "label": "Load game stats",
              "style": 1,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Acc Score: 6,665)",
              "value": "Kills: __**50**__
Deaths: 36
Assists: 21
KDA: 21
Headshot kills: __**36**__
Shots H:F: **298**:**477**
Accuracy: __**62.83%**__
Damage D:T (D/T): __**13,418**__:12,219 (1.1)
Av life duration: 26s
Av damage/life: 372.72
<:TripleKill:1322814228477906944> 4x<:ShotCaller:1322884687693086771> <:NoScope:1322882248516702220> 8x<:DoubleKill:1322814147980689430> 3x<:KillingSpree:1322803050347499541> 4x<:Perfect:1322879561515532308> <:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 2x<:Reversal:1322872797701083166> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Acc Score: 6,455)",
              "value": "Kills: 42
Deaths: 34
Assists: __**28**__
KDA: 17.33
Headshot kills: 31
Shots H:F: 244:419
Accuracy: 58.36%
Damage D:T (D/T): 12,647:11,513 (1.1)
Av life duration: 28s
Av damage/life: 371.97
2x<:Perfect:1322879561515532308> 3x<:DoubleKill:1322814147980689430> 2x<:ShotCaller:1322884687693086771> 3x<:Snipe:1322872969571340370> 2x<:Rifleman:1322860656399220828> 3x<:Reversal:1322872797701083166> 3x<:GuardianAngel:1322873057928286248> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:Wingman:1322854221095108609> <:Stick:1322871787695898676> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Acc Score: 5,550)",
              "value": "Kills: 42
Deaths: __**16**__
Assists: 13
KDA: __**30.33**__
Headshot kills: 28
Shots H:F: 225:404
Accuracy: 55.05%
Damage D:T (D/T): 9,869:__**7,596**__ __**(1.3)**__
Av life duration: __**66s**__
Av damage/life: __**616.81**__
<:DoubleKill:1322814147980689430> 3x<:Perfect:1322879561515532308> 4x<:KillingSpree:1322803050347499541> <:Killjoy:1322802841039147129> 2x<:Rifleman:1322860656399220828> <:Snipe:1322872969571340370> 2x<:GuardianAngel:1322873057928286248>",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Acc Score: 5,215)",
              "value": "Kills: 31
Deaths: 32
Assists: 26
KDA: 7.66
Headshot kills: 16
Shots H:F: 217:443
Accuracy: 48.59%
Damage D:T (D/T): 11,395:10,347 (1.1)
Av life duration: 30s
Av damage/life: 356.09
<:TripleKill:1322814228477906944> <:OfftheRack:1322884747881353279> 2x<:DoubleKill:1322814147980689430> 2x<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Acc Score: 5,885)",
              "value": "Kills: **49**
Deaths: **39**
Assists: 13
KDA: **14.33**
Headshot kills: **35**
Shots H:F: __**304**__:__**497**__
Accuracy: **62.11%**
Damage D:T (D/T): **13,389**:12,281 **(1.09)**
Av life duration: 24s
Av damage/life: **343.31**
<:SneakKing:1322883516039696415> 8x<:DoubleKill:1322814147980689430> 5x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:Whiplash:1322882310122504202> 2x<:Rifleman:1322860656399220828> 3x<:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Acc Score: 4,185)",
              "value": "Kills: 31
Deaths: 41
Assists: 12
KDA: -6
Headshot kills: 19
Shots H:F: 201:399
Accuracy: 50.41%
Damage D:T (D/T): 8,792:**11,203** (0.78)
Av life duration: 22s
Av damage/life: 214.44
<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Stick:1322871787695898676> <:Killjoy:1322802841039147129> <:GuardianAngel:1322873057928286248> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Acc Score: 3,270)",
              "value": "Kills: 21
Deaths: 47
Assists: **20**
KDA: -19.32
Headshot kills: 14
Shots H:F: 226:458
Accuracy: 49.7%
Damage D:T (D/T): 9,495:13,037 (0.73)
Av life duration: 18s
Av damage/life: 202.02
2x<:DoubleKill:1322814147980689430> 2x<:Rifleman:1322860656399220828> <:Reversal:1322872797701083166> <:LastShot:1322884170606972959> <:Wingman:1322854221095108609> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Acc Score: 2,690)",
              "value": "Kills: 17
Deaths: **39**
Assists: 15
KDA: -16.99
Headshot kills: 10
Shots H:F: 191:400
Accuracy: 47.66%
Damage D:T (D/T): 9,384:11,614 (0.81)
Av life duration: **24s**
Av damage/life: 240.62
5x<:ShotCaller:1322884687693086771> <:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:NadeShot:1322877140605206528> 2x<:Rifleman:1322860656399220828> <:StoppedShort:1322806739778670652> 2x<:Killjoy:1322802841039147129> <:Spotter:1322814780796309505> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Players",
        },
      ],
    },
  ],
]
`;

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'MESSAGE' > handles failure to clear timeline data (high level error handling) 1`] = `
[
  "results-channel-1",
  {
    "embeds": [
      {
        "color": 16711680,
        "description": "Something went wrong while trying to post series data",
        "fields": [
          {
            "name": "Additional Information",
            "value": "**Channel**: <#results-channel-1>
**Queue**: 2
**Completed**: <t:1735689600:f>",
          },
        ],
        "title": "Something went wrong",
      },
    ],
  },
]
`;

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'MESSAGE' > handles missing results message 1`] = `
[
  "results-channel-1",
  {
    "embeds": [
      {
        "color": 16711680,
        "description": "Failed to find the results message",
        "fields": [
          {
            "name": "Additional Information",
            "value": "**Channel**: <#results-channel-1>
**Queue**: 2
**Completed**: <t:1735689600:f>",
          },
        ],
        "title": "Something went wrong",
      },
    ],
  },
]
`;

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'THREAD' > creates the thread/message and posts overviews and game stats, clears timeline 1`] = `
[
  [
    "thread-id",
    {
      "embeds": [
        {
          "color": 3447003,
          "description": "-# Start time: <t:1732617393:f> | End time: <t:1732619016:f>",
          "fields": [
            {
              "inline": true,
              "name": "Game",
              "value": "[CTF: Empyrean - Ranked](https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf)
[KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628](https://halodatahive.com/Infinite/Match/e20900f9-4c6c-4003-a175-00000000koth)",
            },
            {
              "inline": true,
              "name": "Duration",
              "value": "10m 58s
12m 12s",
            },
            {
              "inline": true,
              "name": "Score (🦅:🐍)",
              "value": "3:0
3:2",
            },
          ],
          "title": "Series stats for queue #2",
          "url": "https://discord.com/channels/guild-id/1299532381308325949/1310523001611096064",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "fields": [
            {
              "inline": true,
              "name": "Eagle",
              "value": "Kills: __165__
Deaths: __118__
Assists: __81__
KDA: __74__
Headshot kills: __111__
Shots H:F: __984__:1,743
Accuracy: __56.35%__
Damage D:T (D/T): __47,329__:__41,675__ __(1.14)__
Av life duration: __40s__
Av damage/life: __401.09__
2x<:TripleKill:1322814228477906944> 14x<:DoubleKill:1322814147980689430> 11x<:Perfect:1322879561515532308> <:OfftheRack:1322884747881353279> 6x<:ShotCaller:1322884687693086771> 7x<:KillingSpree:1322803050347499541> <:NoScope:1322882248516702220> 4x<:Snipe:1322872969571340370> <:Killjoy:1322802841039147129> 2x<:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 8x<:Rifleman:1322860656399220828> 5x<:Reversal:1322872797701083166> 5x<:GuardianAngel:1322873057928286248> 4x<:Wingman:1322854221095108609> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": true,
              "name": "Cobra",
              "value": "Kills: 118
Deaths: 166
Assists: 56
KDA: -29.33
Headshot kills: 78
Shots H:F: 922:__1,754__
Accuracy: 52.91%
Damage D:T (D/T): 41,060:48,135 (0.85)
Av life duration: 23s
Av damage/life: 247.35
<:SneakKing:1322883516039696415> 11x<:DoubleKill:1322814147980689430> 5x<:ShotCaller:1322884687693086771> 7x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:NadeShot:1322877140605206528> <:Whiplash:1322882310122504202> 8x<:Rifleman:1322860656399220828> 7x<:Killjoy:1322802841039147129> <:Stick:1322871787695898676> <:StoppedShort:1322806739778670652> <:Reversal:1322872797701083166> <:GuardianAngel:1322873057928286248> <:Spotter:1322814780796309505> <:LastShot:1322884170606972959> 3x<:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Team",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "components": [],
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Acc Score: 6,665)",
              "value": "Kills: __**50**__
Deaths: 36
Assists: 21
KDA: 21
Headshot kills: __**36**__
Shots H:F: **298**:**477**
Accuracy: __**62.83%**__
Damage D:T (D/T): __**13,418**__:12,219 (1.1)
Av life duration: 26s
Av damage/life: 372.72
<:TripleKill:1322814228477906944> 4x<:ShotCaller:1322884687693086771> <:NoScope:1322882248516702220> 8x<:DoubleKill:1322814147980689430> 3x<:KillingSpree:1322803050347499541> 4x<:Perfect:1322879561515532308> <:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 2x<:Reversal:1322872797701083166> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Acc Score: 6,455)",
              "value": "Kills: 42
Deaths: 34
Assists: __**28**__
KDA: 17.33
Headshot kills: 31
Shots H:F: 244:419
Accuracy: 58.36%
Damage D:T (D/T): 12,647:11,513 (1.1)
Av life duration: 28s
Av damage/life: 371.97
2x<:Perfect:1322879561515532308> 3x<:DoubleKill:1322814147980689430> 2x<:ShotCaller:1322884687693086771> 3x<:Snipe:1322872969571340370> 2x<:Rifleman:1322860656399220828> 3x<:Reversal:1322872797701083166> 3x<:GuardianAngel:1322873057928286248> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:Wingman:1322854221095108609> <:Stick:1322871787695898676> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Acc Score: 5,550)",
              "value": "Kills: 42
Deaths: __**16**__
Assists: 13
KDA: __**30.33**__
Headshot kills: 28
Shots H:F: 225:404
Accuracy: 55.05%
Damage D:T (D/T): 9,869:__**7,596**__ __**(1.3)**__
Av life duration: __**66s**__
Av damage/life: __**616.81**__
<:DoubleKill:1322814147980689430> 3x<:Perfect:1322879561515532308> 4x<:KillingSpree:1322803050347499541> <:Killjoy:1322802841039147129> 2x<:Rifleman:1322860656399220828> <:Snipe:1322872969571340370> 2x<:GuardianAngel:1322873057928286248>",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Acc Score: 5,215)",
              "value": "Kills: 31
Deaths: 32
Assists: 26
KDA: 7.66
Headshot kills: 16
Shots H:F: 217:443
Accuracy: 48.59%
Damage D:T (D/T): 11,395:10,347 (1.1)
Av life duration: 30s
Av damage/life: 356.09
<:TripleKill:1322814228477906944> <:OfftheRack:1322884747881353279> 2x<:DoubleKill:1322814147980689430> 2x<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Acc Score: 5,885)",
              "value": "Kills: **49**
Deaths: **39**
Assists: 13
KDA: **14.33**
Headshot kills: **35**
Shots H:F: __**304**__:__**497**__
Accuracy: **62.11%**
Damage D:T (D/T): **13,389**:12,281 **(1.09)**
Av life duration: 24s
Av damage/life: **343.31**
<:SneakKing:1322883516039696415> 8x<:DoubleKill:1322814147980689430> 5x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:Whiplash:1322882310122504202> 2x<:Rifleman:1322860656399220828> 3x<:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Acc Score: 4,185)",
              "value": "Kills: 31
Deaths: 41
Assists: 12
KDA: -6
Headshot kills: 19
Shots H:F: 201:399
Accuracy: 50.41%
Damage D:T (D/T): 8,792:**11,203** (0.78)
Av life duration: 22s
Av damage/life: 214.44
<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Stick:1322871787695898676> <:Killjoy:1322802841039147129> <:GuardianAngel:1322873057928286248> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Acc Score: 3,270)",
              "value": "Kills: 21
Deaths: 47
Assists: **20**
KDA: -19.32
Headshot kills: 14
Shots H:F: 226:458
Accuracy: 49.7%
Damage D:T (D/T): 9,495:13,037 (0.73)
Av life duration: 18s
Av damage/life: 202.02
2x<:DoubleKill:1322814147980689430> 2x<:Rifleman:1322860656399220828> <:Reversal:1322872797701083166> <:LastShot:1322884170606972959> <:Wingman:1322854221095108609> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Acc Score: 2,690)",
              "value": "Kills: 17
Deaths: **39**
Assists: 15
KDA: -16.99
Headshot kills: 10
Shots H:F: 191:400
Accuracy: 47.66%
Damage D:T (D/T): 9,384:11,614 (0.81)
Av life duration: **24s**
Av damage/life: 240.62
5x<:ShotCaller:1322884687693086771> <:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:NadeShot:1322877140605206528> 2x<:Rifleman:1322860656399220828> <:StoppedShort:1322806739778670652> 2x<:Killjoy:1322802841039147129> <:Spotter:1322814780796309505> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Players",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "Team Score: 3 | Team K:D:A: 67:55:33",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Rank: 1 | Score: 2,240)",
              "value": "Kills: 12
Deaths: 14
Assists: 8
KDA: 0.66
Headshot kills: 6
Shots H:F: 83:178
Accuracy: 46.62%
Damage D:T (D/T): 4,736:4,879 (0.97)
Av life duration: 32s
Av damage/life: 338.29
Captures: __**2**__
Captures assists: 0
Carrier time: 9s
Grabs: 4
Returns: 0
Carriers killed: 0
<:TripleKill:1322814228477906944> <:OfftheRack:1322884747881353279> 2x<:DoubleKill:1322814147980689430> <:Rifleman:1322860656399220828>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Rank: 2 | Score: 3,355)",
              "value": "Kills: __**22**__
Deaths: 15
Assists: 10
KDA: __**10.33**__
Headshot kills: __**17**__
Shots H:F: 108:182
Accuracy: 59.34%
Damage D:T (D/T): **5,890**:4,614 __**(1.28)**__
Av life duration: 29s
Av damage/life: 392.67
Captures: 1
Captures assists: 2
Carrier time: 20s
Grabs: 14
Returns: 0
Carriers killed: 0
2x<:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:ShotCaller:1322884687693086771> 3x<:Snipe:1322872969571340370> <:Rifleman:1322860656399220828> 2x<:Reversal:1322872797701083166> 2x<:GuardianAngel:1322873057928286248> <:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Rank: 3 | Score: 2,410)",
              "value": "Kills: 16
Deaths: 17
Assists: __**12**__
KDA: 3
Headshot kills: 11
Shots H:F: **122**:**189**
Accuracy: **64.55%**
Damage D:T (D/T): 5,717:5,479 (1.04)
Av life duration: 27s
Av damage/life: 336.29
Captures: 0
Captures assists: 1
Carrier time: 11s
Grabs: 14
Returns: __**2**__
Carriers killed: 0
2x<:ShotCaller:1322884687693086771> <:NoScope:1322882248516702220> <:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> <:Reversal:1322872797701083166> <:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Rank: 3 | Score: 2,375)",
              "value": "Kills: 17
Deaths: __**9**__
Assists: 6
KDA: 10
Headshot kills: 10
Shots H:F: 84:162
Accuracy: 51.85%
Damage D:T (D/T): 3,859:__**3,049**__ (1.27)
Av life duration: __**53s**__
Av damage/life: __**428.78**__
Captures: 0
Captures assists: __**3**__
Carrier time: **22s**
Grabs: __**15**__
Returns: 0
Carriers killed: __**1**__
<:DoubleKill:1322814147980689430> <:Perfect:1322879561515532308> 2x<:KillingSpree:1322803050347499541> <:Killjoy:1322802841039147129> <:Rifleman:1322860656399220828> <:Snipe:1322872969571340370>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "Team Score: 0 | Team K:D:A: 55:68:20",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Rank: 5 | Score: 2,275)",
              "value": "Kills: **19**
Deaths: 16
Assists: 6
KDA: **5**
Headshot kills: **16**
Shots H:F: __**134**__:__**200**__
Accuracy: __**67%**__
Damage D:T (D/T): __**6,202**__:5,431 **(1.14)**
Av life duration: 27s
Av damage/life: **387.63**
Captures: **0**
Captures assists: **0**
Carrier time: 26s
Grabs: 6
Returns: 0
Carriers killed: 0
3x<:DoubleKill:1322814147980689430> 3x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:Rifleman:1322860656399220828> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Rank: 5 | Score: 1,835)",
              "value": "Kills: 17
Deaths: 16
Assists: 2
KDA: 1.66
Headshot kills: 9
Shots H:F: 81:160
Accuracy: 50.62%
Damage D:T (D/T): 3,657:**4,401** (0.83)
Av life duration: 27s
Av damage/life: 228.56
Captures: **0**
Captures assists: **0**
Carrier time: __**1m 3s**__
Grabs: 6
Returns: 0
Carriers killed: 0
<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> <:Stick:1322871787695898676> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Rank: 5 | Score: 1,485)",
              "value": "Kills: 11
Deaths: 21
Assists: **7**
KDA: -7.66
Headshot kills: 9
Shots H:F: 99:191
Accuracy: 51.83%
Damage D:T (D/T): 4,094:5,882 (0.7)
Av life duration: 19s
Av damage/life: 194.95
Captures: **0**
Captures assists: **0**
Carrier time: 
Grabs: 0
Returns: **1**
Carriers killed: 0
<:DoubleKill:1322814147980689430> <:Rifleman:1322860656399220828> <:Reversal:1322872797701083166>",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Rank: 5 | Score: 1,045)",
              "value": "Kills: 8
Deaths: **15**
Assists: 5
KDA: -5.33
Headshot kills: 5
Shots H:F: 77:163
Accuracy: 47.23%
Damage D:T (D/T): 3,859:5,057 (0.76)
Av life duration: **29s**
Av damage/life: 257.27
Captures: **0**
Captures assists: **0**
Carrier time: 17s
Grabs: **9**
Returns: 0
Carriers killed: __**1**__
2x<:ShotCaller:1322884687693086771> <:Rifleman:1322860656399220828> <:StoppedShort:1322806739778670652>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "CTF: Empyrean - Ranked",
          "url": "https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "Team Score: 3 | Team K:D:A: 98:63:48",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Rank: 1 | Score: 4,255)",
              "value": "Kills: __**34**__
Deaths: 19
Assists: 9
KDA: 18
Headshot kills: __**25**__
Shots H:F: __**176**__:**288**
Accuracy: __**61.11%**__
Damage D:T (D/T): __**7,701**__:6,740 (1.14)
Av life duration: 25s
Av damage/life: 405.32
Captures: __**0**__
Occupation time: **1m 11s**
Secures: __**0**__
Offensive kills: __**7**__
Defensive kills: __**4**__
<:TripleKill:1322814228477906944> 8x<:DoubleKill:1322814147980689430> 3x<:KillingSpree:1322803050347499541> 2x<:ShotCaller:1322884687693086771> 4x<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> <:Reversal:1322872797701083166>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Rank: 1 | Score: 3,100)",
              "value": "Kills: 20
Deaths: 19
Assists: __**18**__
KDA: 7
Headshot kills: 14
Shots H:F: 136:237
Accuracy: 57.38%
Damage D:T (D/T): 6,757:6,899 (0.98)
Av life duration: 27s
Av damage/life: 355.63
Captures: __**0**__
Occupation time: 44s
Secures: __**0**__
Offensive kills: 2
Defensive kills: 3
<:ShotCaller:1322884687693086771> 2x<:DoubleKill:1322814147980689430> <:Reversal:1322872797701083166> <:Stick:1322871787695898676> <:GuardianAngel:1322873057928286248> <:Rifleman:1322860656399220828> 2x<:BackSmack:1322872596135546891> <:Wingman:1322854221095108609> <:LastShot:1322884170606972959>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Rank: 1 | Score: 2,975)",
              "value": "Kills: 19
Deaths: 18
Assists: __**18**__
KDA: 7
Headshot kills: 10
Shots H:F: 134:265
Accuracy: 50.56%
Damage D:T (D/T): 6,659:5,468 (1.22)
Av life duration: 27s
Av damage/life: 369.94
Captures: __**0**__
Occupation time: 49s
Secures: __**0**__
Offensive kills: __**7**__
Defensive kills: 1
2x<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Rank: 4 | Score: 3,175)",
              "value": "Kills: 25
Deaths: __**7**__
Assists: 7
KDA: __**20.33**__
Headshot kills: 18
Shots H:F: 141:242
Accuracy: 58.26%
Damage D:T (D/T): 6,010:__**4,547**__ __**(1.32)**__
Av life duration: __**1m 19s**__
Av damage/life: __**858.57**__
Captures: __**0**__
Occupation time: 53s
Secures: __**0**__
Offensive kills: __**7**__
Defensive kills: 1
2x<:KillingSpree:1322803050347499541> 2x<:Perfect:1322879561515532308> <:Rifleman:1322860656399220828> 2x<:GuardianAngel:1322873057928286248>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "Team Score: 2 | Team K:D:A: 63:98:36",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Rank: 5 | Score: 2,350)",
              "value": "Kills: 14
Deaths: 25
Assists: 10
KDA: -7.66
Headshot kills: 10
Shots H:F: 120:239
Accuracy: 50.2%
Damage D:T (D/T): 5,135:6,802 (0.75)
Av life duration: 17s
Av damage/life: 205.4
Captures: __**0**__
Occupation time: __**1m 29s**__
Secures: __**0**__
Offensive kills: 3
Defensive kills: 3
<:Rifleman:1322860656399220828> <:GuardianAngel:1322873057928286248> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Rank: 5 | Score: 1,785)",
              "value": "Kills: 10
Deaths: 26
Assists: **13**
KDA: -11.66
Headshot kills: 5
Shots H:F: 127:267
Accuracy: 47.56%
Damage D:T (D/T): 5,401:7,155 (0.75)
Av life duration: 17s
Av damage/life: 207.73
Captures: __**0**__
Occupation time: 35s
Secures: __**0**__
Offensive kills: 2
Defensive kills: 2
<:DoubleKill:1322814147980689430> <:LastShot:1322884170606972959> <:Wingman:1322854221095108609> <:Killjoy:1322802841039147129> <:Rifleman:1322860656399220828>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Rank: 5 | Score: 1,645)",
              "value": "Kills: 9
Deaths: 24
Assists: 10
KDA: -11.66
Headshot kills: 5
Shots H:F: 114:237
Accuracy: 48.1%
Damage D:T (D/T): 5,525:**6,557** (0.84)
Av life duration: 19s
Av damage/life: 230.21
Captures: __**0**__
Occupation time: 48s
Secures: __**0**__
Offensive kills: 4
Defensive kills: 0
3x<:ShotCaller:1322884687693086771> <:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:NadeShot:1322877140605206528> 2x<:Killjoy:1322802841039147129> <:Spotter:1322814780796309505> <:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Rank: 8 | Score: 3,610)",
              "value": "Kills: **30**
Deaths: **23**
Assists: 7
KDA: **9.33**
Headshot kills: **19**
Shots H:F: **170**:__**297**__
Accuracy: **57.23%**
Damage D:T (D/T): **7,187**:6,850 **(1.05)**
Av life duration: **20s**
Av damage/life: **312.48**
Captures: __**0**__
Occupation time: 47s
Secures: __**0**__
Offensive kills: **5**
Defensive kills: __**4**__
<:SneakKing:1322883516039696415> 2x<:Perfect:1322879561515532308> 5x<:DoubleKill:1322814147980689430> <:Whiplash:1322882310122504202> <:Rifleman:1322860656399220828> 2x<:Killjoy:1322802841039147129>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628",
          "url": "https://halodatahive.com/Infinite/Match/e20900f9-4c6c-4003-a175-00000000koth",
        },
      ],
    },
  ],
]
`;

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'THREAD' > creates the thread/message and posts overviews, clears timeline 1`] = `
[
  [
    "thread-id",
    {
      "embeds": [
        {
          "color": 3447003,
          "description": "-# Start time: <t:1732617393:f> | End time: <t:1732619016:f>",
          "fields": [
            {
              "inline": true,
              "name": "Game",
              "value": "[CTF: Empyrean - Ranked](https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf)
[KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628](https://halodatahive.com/Infinite/Match/e20900f9-4c6c-4003-a175-00000000koth)",
            },
            {
              "inline": true,
              "name": "Duration",
              "value": "10m 58s
12m 12s",
            },
            {
              "inline": true,
              "name": "Score (🦅:🐍)",
              "value": "3:0
3:2",
            },
          ],
          "title": "Series stats for queue #2",
          "url": "https://discord.com/channels/guild-id/1299532381308325949/1310523001611096064",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "embeds": [
        {
          "fields": [
            {
              "inline": true,
              "name": "Eagle",
              "value": "Kills: __165__
Deaths: __118__
Assists: __81__
KDA: __74__
Headshot kills: __111__
Shots H:F: __984__:1,743
Accuracy: __56.35%__
Damage D:T (D/T): __47,329__:__41,675__ __(1.14)__
Av life duration: __40s__
Av damage/life: __401.09__
2x<:TripleKill:1322814228477906944> 14x<:DoubleKill:1322814147980689430> 11x<:Perfect:1322879561515532308> <:OfftheRack:1322884747881353279> 6x<:ShotCaller:1322884687693086771> 7x<:KillingSpree:1322803050347499541> <:NoScope:1322882248516702220> 4x<:Snipe:1322872969571340370> <:Killjoy:1322802841039147129> 2x<:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 8x<:Rifleman:1322860656399220828> 5x<:Reversal:1322872797701083166> 5x<:GuardianAngel:1322873057928286248> 4x<:Wingman:1322854221095108609> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": true,
              "name": "Cobra",
              "value": "Kills: 118
Deaths: 166
Assists: 56
KDA: -29.33
Headshot kills: 78
Shots H:F: 922:__1,754__
Accuracy: 52.91%
Damage D:T (D/T): 41,060:48,135 (0.85)
Av life duration: 23s
Av damage/life: 247.35
<:SneakKing:1322883516039696415> 11x<:DoubleKill:1322814147980689430> 5x<:ShotCaller:1322884687693086771> 7x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:NadeShot:1322877140605206528> <:Whiplash:1322882310122504202> 8x<:Rifleman:1322860656399220828> 7x<:Killjoy:1322802841039147129> <:Stick:1322871787695898676> <:StoppedShort:1322806739778670652> <:Reversal:1322872797701083166> <:GuardianAngel:1322873057928286248> <:Spotter:1322814780796309505> <:LastShot:1322884170606972959> 3x<:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Team",
        },
      ],
    },
  ],
  [
    "thread-id",
    {
      "components": [
        {
          "components": [
            {
              "custom_id": "btn_stats_load_games",
              "emoji": {
                "name": "🎮",
              },
              "label": "Load game stats",
              "style": 1,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "description": "-# Legend: **Best in team** | __**Best overall**__",
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000 (Acc Score: 6,665)",
              "value": "Kills: __**50**__
Deaths: 36
Assists: 21
KDA: 21
Headshot kills: __**36**__
Shots H:F: **298**:**477**
Accuracy: __**62.83%**__
Damage D:T (D/T): __**13,418**__:12,219 (1.1)
Av life duration: 26s
Av damage/life: 372.72
<:TripleKill:1322814228477906944> 4x<:ShotCaller:1322884687693086771> <:NoScope:1322882248516702220> 8x<:DoubleKill:1322814147980689430> 3x<:KillingSpree:1322803050347499541> 4x<:Perfect:1322879561515532308> <:Stick:1322871787695898676> <:FromtheGrave:1322884008773816351> 2x<:Reversal:1322872797701083166> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000 (Acc Score: 6,455)",
              "value": "Kills: 42
Deaths: 34
Assists: __**28**__
KDA: 17.33
Headshot kills: 31
Shots H:F: 244:419
Accuracy: 58.36%
Damage D:T (D/T): 12,647:11,513 (1.1)
Av life duration: 28s
Av damage/life: 371.97
2x<:Perfect:1322879561515532308> 3x<:DoubleKill:1322814147980689430> 2x<:ShotCaller:1322884687693086771> 3x<:Snipe:1322872969571340370> 2x<:Rifleman:1322860656399220828> 3x<:Reversal:1322872797701083166> 3x<:GuardianAngel:1322873057928286248> 2x<:LastShot:1322884170606972959> <:Bodyguard:1322867380136841279> 2x<:Wingman:1322854221095108609> <:Stick:1322871787695898676> 2x<:BackSmack:1322872596135546891>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000 (Acc Score: 5,550)",
              "value": "Kills: 42
Deaths: __**16**__
Assists: 13
KDA: __**30.33**__
Headshot kills: 28
Shots H:F: 225:404
Accuracy: 55.05%
Damage D:T (D/T): 9,869:__**7,596**__ __**(1.3)**__
Av life duration: __**66s**__
Av damage/life: __**616.81**__
<:DoubleKill:1322814147980689430> 3x<:Perfect:1322879561515532308> 4x<:KillingSpree:1322803050347499541> <:Killjoy:1322802841039147129> 2x<:Rifleman:1322860656399220828> <:Snipe:1322872969571340370> 2x<:GuardianAngel:1322873057928286248>",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000 (Acc Score: 5,215)",
              "value": "Kills: 31
Deaths: 32
Assists: 26
KDA: 7.66
Headshot kills: 16
Shots H:F: 217:443
Accuracy: 48.59%
Damage D:T (D/T): 11,395:10,347 (1.1)
Av life duration: 30s
Av damage/life: 356.09
<:TripleKill:1322814228477906944> <:OfftheRack:1322884747881353279> 2x<:DoubleKill:1322814147980689430> 2x<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000 (Acc Score: 5,885)",
              "value": "Kills: **49**
Deaths: **39**
Assists: 13
KDA: **14.33**
Headshot kills: **35**
Shots H:F: __**304**__:__**497**__
Accuracy: **62.11%**
Damage D:T (D/T): **13,389**:12,281 **(1.09)**
Av life duration: 24s
Av damage/life: **343.31**
<:SneakKing:1322883516039696415> 8x<:DoubleKill:1322814147980689430> 5x<:Perfect:1322879561515532308> <:KillingSpree:1322803050347499541> <:OfftheRack:1322884747881353279> <:Whiplash:1322882310122504202> 2x<:Rifleman:1322860656399220828> 3x<:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000 (Acc Score: 4,185)",
              "value": "Kills: 31
Deaths: 41
Assists: 12
KDA: -6
Headshot kills: 19
Shots H:F: 201:399
Accuracy: 50.41%
Damage D:T (D/T): 8,792:**11,203** (0.78)
Av life duration: 22s
Av damage/life: 214.44
<:Perfect:1322879561515532308> 2x<:Rifleman:1322860656399220828> <:Stick:1322871787695898676> <:Killjoy:1322802841039147129> <:GuardianAngel:1322873057928286248> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000 (Acc Score: 3,270)",
              "value": "Kills: 21
Deaths: 47
Assists: **20**
KDA: -19.32
Headshot kills: 14
Shots H:F: 226:458
Accuracy: 49.7%
Damage D:T (D/T): 9,495:13,037 (0.73)
Av life duration: 18s
Av damage/life: 202.02
2x<:DoubleKill:1322814147980689430> 2x<:Rifleman:1322860656399220828> <:Reversal:1322872797701083166> <:LastShot:1322884170606972959> <:Wingman:1322854221095108609> <:Killjoy:1322802841039147129>",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000 (Acc Score: 2,690)",
              "value": "Kills: 17
Deaths: **39**
Assists: 15
KDA: -16.99
Headshot kills: 10
Shots H:F: 191:400
Accuracy: 47.66%
Damage D:T (D/T): 9,384:11,614 (0.81)
Av life duration: **24s**
Av damage/life: 240.62
5x<:ShotCaller:1322884687693086771> <:Perfect:1322879561515532308> <:DoubleKill:1322814147980689430> <:NadeShot:1322877140605206528> 2x<:Rifleman:1322860656399220828> <:StoppedShort:1322806739778670652> 2x<:Killjoy:1322802841039147129> <:Spotter:1322814780796309505> <:Wingman:1322854221095108609>",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Accumulated Series Stats by Players",
        },
      ],
    },
  ],
]
`;

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'THREAD' > falls back to creating a message in post series channel if it fails to create thread 1`] = `
[
  "results-channel-1",
  {
    "embeds": [
      {
        "color": 3447003,
        "description": "-# Start time: <t:1732617393:f> | End time: <t:1732619016:f>",
        "fields": [
          {
            "inline": true,
            "name": "Game",
            "value": "[CTF: Empyrean - Ranked](https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf)
[KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628](https://halodatahive.com/Infinite/Match/e20900f9-4c6c-4003-a175-00000000koth)",
          },
          {
            "inline": true,
            "name": "Duration",
            "value": "10m 58s
12m 12s",
          },
          {
            "inline": true,
            "name": "Score (🦅:🐍)",
            "value": "3:0
3:2",
          },
        ],
        "title": "Series stats for queue #2",
        "url": "https://discord.com/channels/guild-id/1299532381308325949/1310523001611096064",
      },
    ],
  },
]
`;

exports[`NeatQueueService > handleRequest > MATCH_COMPLETED > NeatQueueConfig.PostSeriesMode = 'THREAD' > handles failure to clear timeline data (high level error handling) 1`] = `
[
  "thread-id",
  {
    "embeds": [
      {
        "color": 16711680,
        "description": "Something went wrong while trying to post series data",
        "fields": [
          {
            "name": "Additional Information",
            "value": "**Channel**: <#results-channel-1>
**Queue**: 2
**Completed**: <t:1735689600:f>",
          },
        ],
        "title": "Something went wrong",
      },
    ],
  },
]
`;
